--- a/Maven project/pom.xml
+++ b/Maven project/pom.xml
@@ -25,6 +25,11 @@
             <version>2.4.2</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.4.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>5.4.28.Final</version>
